Defining oneself as a mentor via mentor topics works. Finding mentors by topic works. Updated makefile to dump schema. Updated schema.
